[project]
name = "rx-plain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "google-generativeai>=0.8.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-ollama>=1.0.1",
    "pillow>=12.0.0",
    "pypdf>=6.5.0",
]
